# grokchess

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  RULES.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
engines/: README.md
engines/_template/: engine.py
engines/ajack/: README.md  engine.py
engines/eric/: greedy_material.py  minimax_ab.py  random_mover.py
grokchess/: __init__.py  arena.py  desktop.py  discovery.py  engine_base.py  tournament.py
grokchess/web/: __init__.py  __main__.py  app.py  index.html
grokchess/web/static/pieces/: LICENSE
tests/: test_ajack_engines.py  test_arena.py  test_check_imports.py  test_tournament.py  test_web.py
tools/: check_imports.py  submit.sh
